# mutant

./: .circle.yml  .gitattributes  .gitignore  .rspec  .rubocop.yml  .ruby-gemset  .travis.yml  CONTRIBUTING.md  Cargo.toml  Changelog.md  Gemfile  Gemfile.devtools  Gemfile.rspec3.devtools  Gemfile.rspectre  Gemfile.shared  Gemfile.triage  Guardfile  LICENSE  README.md  RUST.md  Rakefile  SKILL.md  TODO  authors.txt  circle.sh  circle.yml  foo.rb  index.html  locator.rb  mutant  mutant-minitest.gemspec  mutant-mintest.gemspec  mutant-rspec.gemspec  mutant.gemspec  mutant.sh  mutant.yml  mutation-test.rb  params.json  rust-toolchain.toml  rust-toolchain.yaml  (+2 more)
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  gem_push.yml
config/: devtools.yml  flay.yml  flog.yml  mutant.yml  reek.yml  roodi.yml  rubocop.yml  site.reek
docs/: ast-pattern.md  commercial-support.md  commercial.md  concurrency.md  configuration.md  debugging.md  hooks.md  in-the-wild.md  incremental.md  known-problems.md  limitations.md  mutant-minitest.md  mutant-rspec.md  nomenclature.md  rails.md  reading-reports.md  session-json-schema.yml  sorbet.md  test-runner.md
gemfiles/: rspec3.gemfile
lib/: inflector.rb  mutant-minitest.rb  mutant-rspec.rb  mutant.rb  parser-node-list.rb  parser_extensions.rb
lib/inflector/: defaults.rb  inflections.rb  methods.rb
lib/mutant/: actor.rb  ast.rb  base.rb  bootstrap.rb  cache.rb  cli.rb  (+61 more)
manager/: Cargo.toml
manager/src/: check.rs  main.rs  prism.rs  ruby.rs  tasks.rs
meta/: README.md  and.rb  and_asgn.rb  array.rb  begin.rb  binary.rb  block.rb  block_pass.rb  blockarg.rb  boolean.rb  break.rb  case.rb  casgn.rb  cbase.rb  class.rb  conditional_loop.rb  const.rb  csend.rb  cvar.rb  cvasgn.rb  date.rb  def.rb  define.rb  defined.rb  dstr.rb  dsym.rb  ensure.rb  false.rb  float.rb  gvar.rb  gvasgn.rb  hash.rb  if.rb  index.rb  indexasgn.rb  int.rb  ivar.rb  ivasgn.rb  kwarg.rb  kwbegin.rb  (+38 more)
mutant/: Cargo.toml
mutant/src/: ipc.rs  main.rs
mutant/src/ipc/: test.rs
quick_start/: Gemfile  README.md  compare_coverage
rails_example/: .gitignore  Gemfile  Rakefile
ruby/: .rspec  .rubocop.yml  LICENSE  mutant-minitest.gemspec  mutant-rspec.gemspec  mutant-tldr.gemspec  mutant.gemspec  mutant.yml
ruby-unparser/: Cargo.toml
ruby-unparser/src/: emitter.rs  lib.rs  main.rs
scripts/: devloop.sh
spec/: integrations.yml  spec.opts  spec_helper.rb
stylesheets/: stylesheet.css
test_app/: Gemfile.devtools  Gemfile.minitest  Gemfile.minitest-stdlib  Gemfile.rspec2  Gemfile.rspec3  Gemfile.rspec3.0  Gemfile.rspec3.1  Gemfile.rspec3.13  Gemfile.rspec3.2  Gemfile.rspec3.3  Gemfile.rspec3.4  Gemfile.rspec3.5  Gemfile.rspec3.6  Gemfile.rspec3.7  Gemfile.rspec3.8
test_rails/: Gemfile
(+1393 files in other folders)
