[package]
name = "manager"
version.workspace = true
edition.workspace = true
authors = ["Markus Schirp <mbj@schirp-dso.com>"]
license = "Nonstandard"
description = "Mutant development manager"

[[bin]]
name = "manager"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
