[package]
name = "manager"
version.workspace = true
edition.workspace = true
authors = ["Markus Schirp <mbj@schirp-dso.com>"]
license = "Nonstandard"
description = "Mutant development manager"

[[bin]]
name = "manager"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
ociman = { git = "https://github.com/mbj/mrs" }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
