[package]
name = "manager"
version.workspace = true
edition.workspace = true
authors = ["Markus Schirp <mbj@schirp-dso.com>"]
license = "Nonstandard"
description = "Mutant development manager"

[[bin]]
name = "manager"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cmd-proc = "0.4"
log = "0.4"
ociman = "0.3"
tokio = { version = "1", features = ["rt"] }
toml = "0.8"
