[package]
name = "mutant"
version.workspace = true
edition.workspace = true
authors = ["Markus Schirp <mbj@schirp-dso.com>"]
license = "Nonstandard"
description = "Mutation Testing"
homepage = "https://github.com/mbj/mutant"
repository = "https://github.com/mbj/mutant"
readme = "../README.md"

[[bin]]
name = "mutant"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid.workspace = true

[dev-dependencies]
